# radiquant-v5

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  SYSTEM_STATE.md  fix_g01.py  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
scripts/: check_db_core.py  check_event_schema_gate.py  check_frontend_shell.py  check_openapi_drift.sh  check_openapi_runtime.py  check_radi144_api_projection_read.py  check_radi144_cpu_safe_execution.py  check_radi144_domain_service.py  check_radi144_engine_api_decision.py  check_radi144_engine_api_runtime_routes.py  check_radi144_engine_execution_decision.py  check_radi144_engine_manifest.py  check_radi144_external_queue_decision.py  check_radi144_jobtracker_event_binding.py  check_radi144_materialized_projection_alembic_revision_decision.py  check_radi144_materialized_projection_migration_file_authoring_decision.py  check_radi144_materialized_projection_migration_file_creation_decision.py  check_radi144_materialized_projection_migration_file_decision.py  check_radi144_materialized_projection_migration_file_implementation_decision.py  check_radi144_materialized_projection_migration_file_introduction_implementation_decision.py  check_radi144_materialized_projection_migration_file_repository_file_acceptance_decision.py  check_radi144_materialized_projection_migration_file_repository_file_access_implementation_decision.py  check_radi144_materialized_projection_migration_file_repository_file_approval_implementation_decision.py  check_radi144_materialized_projection_migration_file_repository_file_authorization_decision.py  check_radi144_materialized_projection_migration_file_repository_file_creation_implementation_decision.py  check_radi144_materialized_projection_migration_file_repository_file_materialization_decision.py  check_radi144_materialized_projection_migration_file_repository_file_materialization_implementation_decision.py  check_radi144_materialized_projection_migration_file_repository_file_opening_implementation_decision.py  (+32 more)
tests/: conftest.py  test_client_routes.py  (+54 more)
(+440 files in other folders)
