[project]
name = "radiquant-v5"
version = "0.0.0"
description = "Controlled ground-zero rebuild of the Radiquant radionics wellbeing platform."
requires-python = ">=3.11,<3.13"

[project.optional-dependencies]
dev = ["pytest-timeout>=2.3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
timeout_method = "thread"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
